[package]
name = "candle-bert"
version = "0.1.0"
edition = "2021"
description = "porting rust-bert to candle"
readme = "README.md"
repository = "https://github.com/kigichang/candle-bert"
license-file = "LICENSE"
keywords = ["candle", "bert"]

[dependencies]
candle-core = "0.6.0"
candle-nn = "0.6.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
